# EMKS-0001-PYTHON-PARA-ENGENHARIA-DE-MACHINE-LEARNING-KICKSTART

./: .gitignore  pyproject.toml
api_creation/: api.py  curl_request.txt  test_api.ipynb
data/: housing.csv
data_handling/: handling.ipynb
model_creation/: training.ipynb
review/: dictionary.ipynb  list.ipynb  test.py
