[tool.poetry]
name = "python-eml"
version = "0.1.0"
description = "Ambiente virtual para módulo de Python para EML - Dataway BR"
authors = ["Gabriel Saraiva <gabriel.alves@itriad.org.br>"]
readme = "README.md"
packages = [{include = "python_eml"}]

[tool.poetry.dependencies]
python = ">3.10 <3.11"
pandas = "^2.1.3"
numpy = "^1.26.2"
ipykernel = "^6.26.0"
scikit-learn = "^1.3.2"
seaborn = "^0.13.0"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
